syntax = "proto3";

message Accomodation {
  int32 id = 1;
  string name = 2;
  string description=3;
   string location=4;
  string images=5;
  int32 beds=6;
}

service AccomodationService {
  rpc GetAll (google.protobuf.Empty) returns (AccomodationList);
  rpc GetById (AccomodationId) returns (Accomodation);
  rpc Create (Accomodation) returns (google.protobuf.Empty);
  rpc Delete (AccomodationId) returns (google.protobuf.Empty);
  rpc Update (Accomodation) returns (google.protobuf.Empty);
}

message AccomodationId {
  int32 id = 1;
}

message AccomodationList {
  repeated Accomodation accomodations = 1;
}